--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,6 +1,25 @@
-/* add css module styles here (optional) */
-
 .anamnesisContainer {
   height: 100%;
   width: 100%;
+}
+
+.anamnesisHeader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+.anamnesisBody {
+  position: fixed;
+  top: 58px;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  bottom: 66px;
+}
+.anamnesisFooter {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
